<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_add_meeting_toolbar"
        />

    <TextView
        android:id="@+id/tvAddMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_add_meeting"
        android:textAppearance="?attr/textAppearanceHeadline4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />

    <TextView
        android:id="@+id/tvRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/add_meeting_content_margin_left"
        android:layout_marginTop="15dp"
        android:text="@string/text_add_meeting_room"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddMeeting"
        />

    <Spinner
        android:id="@+id/spinnerRooms"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/tvRoom"
        app:layout_constraintLeft_toRightOf="@id/tvRoom"
        app:layout_constraintTop_toTopOf="@id/tvRoom"
        />

    <TextView
        android:id="@+id/tvParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_add_meeting_participants"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintLeft_toLeftOf="@id/tvRoom"
        app:layout_constraintTop_toBottomOf="@id/tvRoom"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvParticipants"
        android:layout_width="0dp"
        android:layout_height="@dimen/add_meeting_participants_rv_height"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintLeft_toLeftOf="@id/tvParticipants"
        app:layout_constraintRight_toLeftOf="@id/ivAddParticipant"
        app:layout_constraintTop_toBottomOf="@id/tvParticipants"
        tools:listitem="@layout/item_participant"
        />

    <ImageView
        android:id="@+id/ivAddParticipant"
        android:layout_width="0dp"
        android:layout_height="@dimen/add_meeting_participants_rv_height"
        android:layout_marginEnd="@dimen/add_meeting_content_margin_left"
        android:background="@color/grey"
        android:contentDescription="@string/desc_add_participant"
        android:src="@drawable/ic_plus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/rvParticipants"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/rvParticipants"
        app:tint="?attr/colorSurface"
        />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@id/rvParticipants"
        app:layout_constraintRight_toRightOf="@id/ivAddParticipant"
        app:layout_constraintTop_toBottomOf="@id/rvParticipants"
        />

    <View
        android:id="@+id/scrim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/scrimBackground"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAddParticipant"
        android:layout_width="@dimen/add_meeting_add_participant_rv_width"
        android:layout_height="@dimen/add_meeting_add_participant_rv_height"
        android:background="?attr/colorSurface"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_add_participant"
        />

</androidx.constraintlayout.widget.ConstraintLayout>